--- a/study_code/index.html
+++ b/study_code/index.html
@@ -6,6 +6,14 @@
     <title>문서의 이름</title>
   </head>
   <body>
+    <!-- layout -->
+    <script>
+      //window.location = ".html/test.html";
+      //window.location = ".html/a_01_basic.html"
+      //location = ".html/test.html"
+      location = "./html/a_00_content.html";
+
+    </script>
     결과는??
   </body>
 </html>
