--- a/study_code/index.html
+++ b/study_code/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<!-- 필요한 내용을 작성 -->
+<!-- index.html -->
 <html lang="ko-KR">
-  <head>
-    <meta charset="utf-8">
-    <title>문서의 이름</title>
-  </head>
-  <body>
-    <!-- layout -->
-    <script>
-      //window.location = ".html/test.html";
-      //window.location = ".html/a_01_basic.html"
-      //location = ".html/test.html"
-      location = "./html/a_00_content.html";
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="keywords" content="html, css, js, index, first">
+  <meta name="description" content="웹문서를 학습하기 위한 기초 형태">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>문서의 이름</title>
+</head>
+<body>
+  <!-- layout -->
+  <!-- <a href=".main.html">메인페이지로 이동</a> -->
 
-    </script>
-  </body>
+  <!-- script -->
+  <script>
+    //강제로 페이지 이동
+    // window.location = "./html/main.html";
+    window.location = "./html/a_01_basic.html";
+  </script>
+  
+</body>
 </html>
