--- a/study_code/html/a_00_content.html
+++ b/study_code/html/a_00_content.html
@@ -30,7 +30,11 @@
         <h2>html 기초 내용</h2>
         <ul>
           <li><a target="_blank" href="./a_01_basic_html">제목 및 내용</a></li>
-          <li><a target="_blank" href="./a_02_basic_list.html">리스트</a></li>        
+          <li><a target="_blank" href="./a_02_basic_list.html">리스트</a></li>
+          <li><a target="_blank" href="./a_03_id_class.html">id와 class 비교</a></li>
+          <li><a target="_blank" href="./a_04_table.html">table 코드 이해 1</a></li>
+          <li><a target="_blank" href="./a_05_table2.html">table 코드 이해 2</a></li>
+          
         </ul>
       </div>
 
