예제 실수 업데이트
태그에 바로 style 적었음/ class명 생성해서 style시트로 따로 뺌

--- a/study_code/html/a_05_table2.html
+++ b/study_code/html/a_05_table2.html
@@ -26,6 +26,8 @@
     /* td { min-width: 150px; min-height: 100px;} */
     tbody>tr { background-color: #ddd;}
     .tableFirst { background-color: #445E9B; color: #fff;}
+    .tableSub { font-size: 20px; font-weight: 500; }
+    .tableTitleSub { color: #999;}
   
 
   </style>
@@ -38,7 +40,7 @@
     <div class="part">
       <h2>테이블 연습</h2>
       <table summary="오피스 클리닝 서비스 가격">
-        <caption id="tableTitle">&gt;&gt;&gt;오피스 클리닝 서비스 가격 <span style="color: #999;">SERVEIC PRICE</span></caption>
+        <caption id="tableTitle">&gt;&gt;&gt;오피스 클리닝 서비스 가격 <span class="tableTitleSub">SERVEIC PRICE</span></caption>
         <thead>
           <tr>
             <td>구분</td>
@@ -51,7 +53,7 @@
         <tbody>
           <tr>
             <td class="tableFirst">사무실 / 업소 <br /> 리모델링 대청소</td>
-            <td colspan="4" style="font-size: 20px; font-weight: 500;">전화상담 후 무료방문</td>
+            <td  class="tableSub" colspan="4">전화상담 후 무료방문</td>
           </tr>
 
           <tr>
