border, outline 공부

--- a/study_code/b_step_01/html/b_04_mpbo.html
+++ b/study_code/b_step_01/html/b_04_mpbo.html
@@ -75,6 +75,41 @@
       </ul>
     </div><!-- // .ex_part -->
 
+
+    <div class="ex_part">
+      <h2>border</h2>
+      <!-- ul.ex>li.b_$$*b{border_$$} -->
+      <ul class="ex b_base">
+        <li class="b_01"><span>border_01</span></li>
+        <li class="b_02"><span>border_02</span></li>
+        <li class="b_03"><span>border_03</span></li>
+        <li class="b_04"><span>border_04</span></li>
+        <li class="b_05"><span>border_05</span></li>
+        <li class="b_06">
+          <button type="button">
+            <span>border_06</span>
+          </button>
+        </li>
+      </ul>
+    </div><!-- // .ex_part -->
+
+
+
+    <div class="ex_part">
+      <h2>outline</h2>
+      <ul class="ex o_base">
+        <li class="o_01"><span>outline_01</span></li>
+        <li class="o_02"><span>outline_02</span></li>
+        <li class="o_03"><a href="#"><span>outline_03</span></a></li>
+        <li class="o_04">
+          <button>
+            <span>outline_04</span>
+          </button>
+        </li>
+      </ul>
+    </div><!-- // .ex_part -->
+
+    
   </div><!-- // #wrap -->
 
   <!-- script -->
