과제 5번 정리

--- a/study_code/c_layout_01/html/b_01_layout_base.html
+++ b/study_code/c_layout_01/html/b_01_layout_base.html
@@ -66,7 +66,23 @@
       </div>
     </div><!-- // .ex_part -->
 
-    <!-- layout 05는 보류 -->
+    <div class="ex_part">
+      <h2>layout 05</h2>
+      <div class="box_05 clearfix">
+        <div class="inner_01">
+          <div class="insert">insert</div>
+        </div>
+        <div class="inner_02">
+          <div class="insert">insert</div>
+          </div>
+        <div class="inner_03">
+          <div class="insert">insert</div>
+        </div>
+        
+      </div>
+    </div><!-- // .ex_part -->
+
+
     <div class="ex_part">
       <h2>layout 06</h2>
 
