--- a/study_code/c_layout_01/html/a_content.html
+++ b/study_code/c_layout_01/html/a_content.html
@@ -24,6 +24,8 @@
       <h2>레이아웃</h2>
       <ul>
         <li><a href="b_01_layout_base.html">float을 이해하기 위한 layout 구성 풀이</a></li>
+        <li><a href="layout_02.html">레이아웃 만들기</a></li>
+        <li><a href="b_02_layout_test_01_result.html">레이아웃 결과</a></li>
       </ul>
     </div>
   </div><!-- // #wrap -->
