layout_basic 수정

--- a/study_code/homework/html/b_layout_basic.html
+++ b/study_code/homework/html/b_layout_basic.html
@@ -15,39 +15,152 @@
 </head>
 <body>
   <!-- layout -->
-  <div id="headBox">
+  <div id="headBox" class="clearfix">
+    <div class="site_name"><h1>site name</h1></div>
+    <div class="gnb_area clearfix">
+      <div class="gnb_01"></div>
+      <div class="gnb_02"></div>
+      <div class="gnb_03"></div>
+      <div class="gnb_04"></div>
+      <div class="gnb_05"></div>
+    </div>
+    <div class="unb_area"></div>
 
   </div><!-- // #headBox-->
   
   <div id="adViewBox">
-
+    <div class="view_outer">.view_outer</div>
+    <div class="view_indicator clearfix">
+      <div class="view_01"></div>
+      <div class="view_02"></div>
+      <div class="view_03"></div>
+      <div class="view_04"></div>
+      <div class="view_05"></div>
+      <div class="view_06"></div>
+    </div>
   </div><!-- // #adViewBox-->
   
   <div id="localNavBox">
-
+    <div class="local_nav_outer clearfix">
+      <div class="local_nav_01"></div>
+      <div class="local_nav_02"></div>
+      <div class="local_nav_03"></div>
+      <div class="local_nav_04"></div>
+      <div class="local_nav_05"></div>
+      <div class="local_nav_06"></div>
+    </div>
   </div><!-- // #localNavBox-->
   
   <div id="popularContentBox">
+    <div class="pop_con_name"><h3>h3(인기 콘텐츠)</h3></div>
+    <div class="pop_con_area clearfix">
 
+      <div class="pop_con">
+        <div class="pop_con_img"></div>
+        <div class="pop_con_text"></div>
+      </div>
+
+      <div class="pop_con">
+        <div class="pop_con_img"></div>
+        <div class="pop_con_text"></div>
+      </div>
+
+      <div class="pop_con">
+        <div class="pop_con_img"></div>
+        <div class="pop_con_text"></div>
+      </div>
+
+    </div>
   </div><!-- // #popularContentBox-->
   
   <div id="newContentBox">
+    <div class="new_con_name"><h3>h3(최신 콘텐츠)</h3></div>
+    <div class="new_con_area clearfix">
 
+      <div class="new_con_title_area">
+        <div class="new_con_title_img"></div>
+        <div class="new_con_title_text">
+          <div class="new_con_title_text_name"></div>
+          <div class="new_con_title_text_detail"></div>
+        </div>
+      </div>
+
+      <div class="new_con_more_area">
+        <div class="new_con_more_01 clearfix">
+          <div class="new_con_more_img"></div>
+          <div class="new_con_more_text"></div>
+        </div>
+        <div class="new_con_more_02 clearfix">
+          <div class="new_con_more_img"></div>
+          <div class="new_con_more_text"></div>
+        </div>
+      </div>
+    </div>
   </div><!-- // #newContentBox-->
   
   <div id="recommendedContentBox">
-
+    <div class="recom_con_name"><h3>h3(추천 콘텐츠)</h3></div>
+    <div class="recom_con_area clearfix">
+      <div class="re_con_part_area">
+        <div class="re_con_part_img"></div>
+        <div class="re_con_part_text"></div>
+      </div>
+      <div class="re_con_part_area">
+        <div class="re_con_part_img"></div>
+        <div class="re_con_part_text"></div>
+      </div>
+      <div class="re_con_part_area">
+        <div class="re_con_part_img"></div>
+        <div class="re_con_part_text"></div>
+      </div>
+      <div class="re_con_part_area">
+        <div class="re_con_part_img"></div>
+        <div class="re_con_part_text"></div>
+      </div>
+    </div>
   </div><!-- // #recommendedContentBox-->
   
   <div id="communityBox">
+    <div class="community_name"><h3>h3(community)</h3></div>
+    <div class="community_area">
+      <div class="community_con clearfix">
+        <div class="community_con_img"></div>
+        <!-- <dl> -->
+          <dt></dt>
+          <dd></dd>
+        <!-- </dl> -->
+      </div>
+      <div class="community_con">
+        <div class="community_con_img"></div>
+        <dl>
+          <dt></dt>
+          <dd></dd>
+        </dl>
+      </div>
+      <div class="community_con">
+        <div class="community_con_img"></div>
+        <dl>
+          <dt></dt>
+          <dd></dd>
+        </dl>
+      </div>
+    </div>
 
   </div><!-- // #communityBox-->
-  
+    
   <div id="miniAdBox">
-
+    <div class="mini_ad_outer clearfix">
+      <div class="mini_ad_01"></div>
+      <div class="mini_ad_02"></div>
+      <div class="mini_ad_03"></div>
+    </div>
   </div><!-- // #miniAdBox-->
   
   <div id="footerBox">
+    <div class="footer clearfix">
+      <div class="footer_01"></div>
+      <div class="footer_02"></div>
+    </div>
 
   </div><!-- // #footerBox-->
   
