--- a/study_code/c_layout_01/html/a_content.html
+++ b/study_code/c_layout_01/html/a_content.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href=""> -->
-
-  <script src="../js/common/modernizr-custom.js"></script>
-
+  
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
   <link rel="apple-touch-icon" href="../favicon.png">
+
+  <script src="../js/common/modernizr-custom.js"></script>
   <title>Document</title>
 </head>
 <body>
@@ -26,6 +26,7 @@
         <li><a href="b_01_layout_base.html">float을 이해하기 위한 layout 구성 풀이</a></li>
         <li><a href="layout_02.html">레이아웃 만들기</a></li>
         <li><a href="b_02_layout_test_01_result.html">레이아웃 결과</a></li>
+        <li><a href="b_03_layout_test_02_result.html">레이아웃 과제 결과</a></li>
       </ul>
     </div>
   </div><!-- // #wrap -->
