--- a/study_code/b_step_01/html/a_06_semantic.html
+++ b/study_code/b_step_01/html/a_06_semantic.html
@@ -16,10 +16,56 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <header id="headBox" role="banner"></header>
-    <div id="viewBox" role="region"></div>
-    <article id="contentBox" role="main"></article>
-    <footer id="footBox" role="contentinfo"></footer>
+    <header id="headBox">
+      <h1>site</h1>
+      <nav id="navigation">
+        <h2>navigation</h2>
+        <div class="gnb" role="menu">
+          <h3>gnb</h3>
+        </div>
+        <div class="unb" role="menu">
+          <h3>unb</h3>
+        </div>
+      </nav>
+    </header>
+
+    <section id="viewBox">
+      <h2>광고영역</h2>
+      <!-- section 내부에는 작은 웹 구성이 가능 -->
+    </section>
+
+    <main class="content_wrap">      
+      <article id="contentBox">
+        <div class="con_inner">
+          <h2>주요내용</h2>
+          <figure>
+            <figcaption>이미지에 대한 설명</figcaption>
+            <img src="../img/sticker/bee.png" alt="bee sticker">
+            <img src="../img/sticker/cactus.png" alt="cactus sticker">
+          </figure>
+          <figure>
+            <figcaption>노래가사</figcaption>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ipsa.</p>
+          </figure>
+        </div>
+      </article>
+      <article id="contentBox2">
+        <h2>주요내용</h2>
+      </article>
+      <article id="contentBox3">
+        <h2>주요내용</h2>
+      </article>
+      <article id="contentBox4">
+        <h2>주요내용</h2>
+      </article>
+    </main>
+
+    <aside id="sideBox">
+      <h2>보조 추가내용</h2>
+      <!-- 최근본, 장바구니, 탑으로 이동 -->
+    </aside>
+
+    <footer id="footBox"></footer>
   </div><!-- // #wrap -->
 
   <!-- script -->
