--- a/study_code/b_step_01/html/b_06_positon.html
+++ b/study_code/b_step_01/html/b_06_positon.html
@@ -48,6 +48,12 @@
       </div>
     </div>
 
+    <div class="ex_part">
+      <h3>화면의 가운데를 기준으로 우측 500px 즈음 하단 50px 위로 버튼을 생성</h3>
+      <div class="btn">
+        <button type="button">상단으로 이동</button>
+      </div>
+    </div>
 
   </div><!-- // .wrap -->
 
