--- a/study_code/d_project_01/html/main_v1.html
+++ b/study_code/d_project_01/html/main_v1.html
@@ -36,7 +36,16 @@
 
     <section id="viewBox">
       <h2 class="blind">광고영역</h2>
-      <div class="view_inner"></div>
+      <div class="view_inner">
+        <dl>
+          <dt>view title</dt>
+          <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure recusandae dolorem corrupti aut facere quidem, eum necessitatibus alias fugiat velit?</dd>
+          <dd><a href="#">바로가기</a></dd>
+        </dl>
+        <figure class="img_source">
+          <figcaption>이미지 설명</figcaption>
+        </figure>
+      </div>
     </section><!-- // #viewBox -->
 
     <section id="newBox">
