--- a/study_code/c_layout_01/html/a_content.html
+++ b/study_code/c_layout_01/html/a_content.html
@@ -29,6 +29,7 @@
         <li><a target="blank" href="b_03_layout_test_02_result.html">레이아웃 과제 결과 2</a></li>
         <li><a target="blank" href="b_03_layout_test_03_result.html">레이아웃 과제 결과 3</a></li>
         <li><a target="blank" href="b_03_layout_test_04_result.html">레이아웃 과제 결과 4</a></li>
+        <li><a target="blank" href="b_04_layout_test_pdf_result.html">pdf 결과</a></li>
       </ul>
     </div>
   </div><!-- // #wrap -->
