q_9에 10번 문제 스스로 풀이

--- a/study_code/c_layout_01/html/b_04_layout_test_pdf_result.html
+++ b/study_code/c_layout_01/html/b_04_layout_test_pdf_result.html
@@ -50,5 +50,29 @@
       </ul>
     </div>
   </div>
+
+  <div class="q_10 wrap">
+    q_10
+    <div class="side_indicator">
+      <ul>
+        <li>
+          <a href="#">1</a>
+          <span>text 내용</span>
+        </li>
+        <li>
+          <a href="#">2</a>
+        </li>
+        <li>
+          <a href="#">3</a>
+        </li>
+        <li>
+          <a href="#">4</a>
+        </li>
+        <li>
+          <a href="#">5</a>
+        </li>
+      </ul>
+  </div>
+  </div>
 </body>
 </html>
