--- a/study_code/c_layout_01/html/b_04_layout_test_pdf_result.html
+++ b/study_code/c_layout_01/html/b_04_layout_test_pdf_result.html
@@ -61,15 +61,19 @@
         </li>
         <li>
           <a href="#">2</a>
+          <span>text 내용</span>
         </li>
         <li>
           <a href="#">3</a>
+          <span>text 내용</span>
         </li>
         <li>
           <a href="#">4</a>
+          <span>text 내용</span>
         </li>
         <li>
           <a href="#">5</a>
+          <span>text 내용</span>
         </li>
       </ul>
   </div>
