--- a/study_code/c_layout_01/html/c_01_web.html
+++ b/study_code/c_layout_01/html/c_01_web.html
@@ -25,8 +25,57 @@
 <body>
   <!-- layout -->
   <div id="wrap">
+    <div id="headBox">
+      <h1>사이트</h1>
+      <div id="navigation">
+        <h2 class="blind">navigation</h2>
+        <ul class="gnb">
+          <li><a href="#">탑</a></li>
+          <li><a href="#">아우터</a></li>
+          <li><a href="#">팬츠</a></li>
+          <li><a href="#">악세서리</a></li>
+        </ul>
+      </div>
+    </div>
 
-    
+    <div id="viewBox">
+      <h2 class="blind">광고</h2>
+    </div>
+
+    <div id="conBox">
+      <h2 class="blind">본문내용</h2>
+      <div class="con_inner_01">
+        <h3 class="blind">공지사항 및 갤러리</h3>
+
+        <div class="tab_title_area">
+          <ul>
+            <li class="action">
+              <button type="button">공지사항</button>
+            </li>
+            <li>
+              <button type="button">갤러리</button>
+            </li>
+          </ul>
+        </div>
+        <div class="tab_content_area">
+          <div class="tab_detail_01 action"></div>
+          <div class="tab_detail_02"></div>
+        </div>
+      </div>
+      <div class="con_inner_02">
+        <h3 class="blind">배너</h3>
+      </div>
+      <div class="con_inner_03">
+        <h3 class="blind">바로가기</h3>
+      </div>
+    </div>
+
+    <div id="footBox">
+      <h2>com info</h2>
+      <address></address>
+      <div class="social"></div>
+    </div>
+
   </div>
 </body>
 </html>
