--- a/study_code/c_layout_01/html/c_01_web.html
+++ b/study_code/c_layout_01/html/c_01_web.html
@@ -67,6 +67,21 @@
       </div>
       <div class="con_inner_03">
         <h3 class="blind">바로가기</h3>
+        <div class="btn">
+          <button type="button">상세보기</button>
+        </div>
+
+        <div class="modal">
+          <div class="modal_message">
+            <h4>modal title</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe praesentium nemo debitis facilis omnis rerum!</p>
+            <div class="close">
+              <button type="button" autofocus>닫기</button>
+            </div>
+          </div> <!-- // .modal_message -->
+          <div class="modal_bg"></div>
+        </div> <!-- // .modal -->
+
       </div>
     </div>
 
