웹디자인기능사 문제 2번 풀이 추가

--- a/study_code/c_layout_01/html/c_02_web_result.html
+++ b/study_code/c_layout_01/html/c_02_web_result.html
@@ -23,21 +23,68 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <div id="headBox">
+    <header id="headBox">
       <h1>site name</h1>
-      <div class="navigation"></div>
-    </div>
-    <div id="viewBox"></div>
-    <div id="contentBox">
-      <div class="notice_area"></div>
-      <div class="gallery_area"></div>
-      <div class="commercial_area"></div>
-    </div>
-    <div id="footBox">
+      <nav class="navigation">
+        <h2 class="blind">네비게이션</h2>
+        <ul>
+          <li>
+            <div class="nav_title"><a href="#">재단소개</a></div>
+            <ul class="nav_list">
+              <li><a href="#">설립취지</a></li>
+              <li><a href="#">연혁</a></li>
+              <li><a href="#">찾아옹시는길</a></li>
+            </ul>
+          </li>
+          <li>
+            <li>
+              <div class="nav_title"><a href="#">후원하기</a></div>
+              <ul class="nav_list">
+                <li><a href="#">국내후원</a></li>
+                <li><a href="#">국외후원</a></li>
+                <li><a href="#">맞춤후원</a></li>
+              </ul>
+            </li>
+          </li>
+          <li>
+            <div class="nav_title"><a href="#">자료실</a></div>
+            <ul class="nav_list">
+              <li><a href="#">서식자료실</a></li>
+              <li><a href="#">사진자료실</a></li>
+              <li><a href="#">후원양식</a></li>
+            </ul>
+          </li>
+          <li>
+            <div class="nav_title"><a href="#">스토리</a></div>
+            <ul class="nav_list">
+              <li><a href="#">웹진</a></li>
+              <li><a href="#">보고서</a></li>
+              <li><a href="#">나의 후원</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <article id="viewBox">
+      <h2 class="blind">광고</h2>
+    </article>
+    <article id="contentBox">
+      <h2 class="blind">본문</h2>
+      <section class="con_area notice_area">
+        <h3 class="blind">notice</h3>
+      </section>
+      <section class="con_area gallery_area">
+        <h3 class="blind">gallery</h3>
+      </section>
+      <section class="con_area commercial_area">
+        <h3 class="blind">commercial</h3>
+      </section>
+    </article>
+    <footer id="footBox">
       <h2>site name</h2>
-      <address></address>
+      <address>copyright</address>
       <div class="family"></div>
-    </div>
+    </footer>
   </div><!-- // #wrap -->
 
   <!-- script -->
