--- a/study_code/c_layout_01/html/c_02_web_result.html
+++ b/study_code/c_layout_01/html/c_02_web_result.html
@@ -24,62 +24,87 @@
   <!-- layout -->
   <div id="wrap">
     <header id="headBox">
-      <h1>site name</h1>
-      <nav class="navigation">
-        <h2 class="blind">네비게이션</h2>
-        <ul>
-          <li>
-            <div class="nav_title"><a href="#">재단소개</a></div>
-            <ul class="nav_list">
-              <li><a href="#">설립취지</a></li>
-              <li><a href="#">연혁</a></li>
-              <li><a href="#">찾아옹시는길</a></li>
-            </ul>
-          </li>
-          <li>
+      <div class="head_wrapper">
+        <h1>site name</h1>
+        <nav class="navigation">
+          <h2 class="blind">네비게이션</h2>
+          <ul>
             <li>
-              <div class="nav_title"><a href="#">후원하기</a></div>
+              <div class="nav_title"><a href="#">재단소개</a></div>
               <ul class="nav_list">
-                <li><a href="#">국내후원</a></li>
-                <li><a href="#">국외후원</a></li>
-                <li><a href="#">맞춤후원</a></li>
+                <li><a href="#">설립취지</a></li>
+                <li><a href="#">연혁</a></li>
+                <li><a href="#">찾아오시는길</a></li>
               </ul>
             </li>
-          </li>
-          <li>
-            <div class="nav_title"><a href="#">자료실</a></div>
-            <ul class="nav_list">
-              <li><a href="#">서식자료실</a></li>
-              <li><a href="#">사진자료실</a></li>
-              <li><a href="#">후원양식</a></li>
-            </ul>
-          </li>
-          <li>
-            <div class="nav_title"><a href="#">스토리</a></div>
-            <ul class="nav_list">
-              <li><a href="#">웹진</a></li>
-              <li><a href="#">보고서</a></li>
-              <li><a href="#">나의 후원</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
+            <li>
+              <li>
+                <div class="nav_title"><a href="#">후원하기</a></div>
+                <ul class="nav_list">
+                  <li><a href="#">국내후원</a></li>
+                  <li><a href="#">국외후원</a></li>
+                  <li><a href="#">맞춤후원</a></li>
+                </ul>
+              </li>
+            </li>
+            <li>
+              <div class="nav_title"><a href="#">자료실</a></div>
+              <ul class="nav_list">
+                <li><a href="#">서식자료실</a></li>
+                <li><a href="#">사진자료실</a></li>
+                <li><a href="#">후원양식</a></li>
+              </ul>
+            </li>
+            <li>
+              <div class="nav_title"><a href="#">스토리</a></div>
+              <ul class="nav_list">
+                <li><a href="#">웹진</a></li>
+                <li><a href="#">보고서</a></li>
+                <li><a href="#">나의 후원</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
+
     <article id="viewBox">
       <h2 class="blind">광고</h2>
     </article>
+
+
     <article id="contentBox">
-      <h2 class="blind">본문</h2>
+      <h2 class="blind">본문내용</h2>
       <section class="con_area notice_area">
-        <h3 class="blind">notice</h3>
+        <h3>공지사항</h3>
+        <div class="con_part">
+          <ul>
+            <li>공지사항: Lorem ipsum dolor sit amet.</li>
+            <li>공지사항: Lorem ipsum dolor sit amet.</li>
+            <li>공지사항: Lorem ipsum dolor sit amet.</li>
+            <li>공지사항: Lorem ipsum dolor sit amet.</li>
+          </ul>
+        </div>
       </section>
+
       <section class="con_area gallery_area">
-        <h3 class="blind">gallery</h3>
+        <h3>갤러리</h3>
+        <div class="con_part">
+          <ul>
+            <li>gallery_01</li>
+            <li>gallery_02</li>
+            <li>gallery_03</li>
+          </ul>
+        </div>
       </section>
+
       <section class="con_area commercial_area">
         <h3 class="blind">commercial</h3>
       </section>
     </article>
+
+    <aside id="otherBox"></aside>
+
     <footer id="footBox">
       <h2>site name</h2>
       <address>copyright</address>
