cubeme 프로토타입 업데이트

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -25,7 +25,16 @@
   <div id="wrap">
     <header id="headBox">
       <h1>logo</h1>
-      <div id="gnb"></div>
+      <div id="gnb">
+        <ul>
+          <li><a href="#">모든 상품</a></li>
+          <li><a href="#">챌린지</a></li>
+          <li><a href="#">이벤트</a></li>
+          <li><a href="#">매거진</a></li>
+          <li><a href="#">브랜드 소개</a></li>
+          <li><a href="#">매장안내</a></li>
+        </ul>
+      </div>
       <div id="unb"></div>
     </header> <!-- // #headBox-->
 
@@ -33,16 +42,49 @@
     <section id="viewBox">
       <h2 class="blind">상단 배너</h2>
       <div class="view_area"></div>
-      <div class="side_view_area"></div>
+      <div class="side_view_area">
+        <div class="side_view"></div>
+        <div class="side_view"></div>
+        <div class="side_view"></div>
+      </div>
 
     </section> <!-- // #viewBox-->
 
 
     <section id="bestBox">
       <div class="title_area">
-        <h2>가장 핫한 큐브</h2>
+        <div class="title_text">
+          <h2 class="title">가장 핫한 큐브</h2>
+          <span class="sub_title">Lorem ipsum dolor sit amet.</span>
+        </div>
+        <div class="title_all">모두보기</div>
       </div>
-      <div class="best_area"></div>
+      <div class="best_area">
+        <div class="best_item">
+          <div class="best_img"></div>
+          <div class="best_text">
+            <span class="text_title">Lorem.</span>
+            <span class="text_price">Lorem, ipsum.</span>
+            <span class="text_detail">Lorem ipsum dolor sit amet.</span>
+          </div>
+        </div>
+        <div class="best_item">
+          <div class="best_img"></div>
+          <div class="best_text">
+            <span class="text_title">Lorem.</span>
+            <span class="text_price">Lorem, ipsum.</span>
+            <span class="text_detail">Lorem ipsum dolor sit amet.</span>
+          </div>
+        </div>
+        <div class="best_item">
+          <div class="best_img"></div>
+          <div class="best_text">
+            <span class="text_title">Lorem.</span>
+            <span class="text_price">Lorem, ipsum.</span>
+            <span class="text_detail">Lorem ipsum dolor sit amet.</span>
+          </div>
+        </div>
+      </div>
 
     </section> <!-- // #bestBox-->
 
@@ -57,7 +99,10 @@
 
     <article id="challengeBox">
       <div class="title_area">
-        <h2>챌린지</h2>
+        <div class="title_text">
+          <h2 class="title">챌린지</h2>
+          <span class="sub_title">Lorem ipsum dolor sit amet.</span>
+        </div>
       </div>
       <div class="challenge_area"></div>
 
@@ -66,7 +111,10 @@
 
     <section id="eventBox">
       <div class="title_area">
-        <h2>진행중인 이벤트</h2>
+        <div class="title_text">
+          <h2 class="title">진행중인 이벤트</h2>
+        </div>
+        <div class="title_all">모두보기</div>
       </div>
       <div class="event_area"></div>
 
@@ -81,7 +129,10 @@
 
     <section id="saleBox">
       <div class="title_area">
-        <h2>세일 중인 상품</h2>
+        <div class="title_text">
+          <h2 class="title">세일 중인 상품</h2>
+          <div class="sub_title">Lorem ipsum dolor sit amet.</div>
+        </div>
       </div>
       <div class="sale_area"></div>
 
