cubeme project update

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -35,13 +35,31 @@
           <li><a href="#">매장안내</a></li>
         </ul>
       </div>
-      <div id="unb"></div>
+      <div id="unb">
+        <div class="unb_btn">
+          <div class="unb_sign">회원가입</div>
+          <div class="unb_login">로그인</div>
+          <div class="unb_cs">고객센터</div>
+        </div>
+
+        <div class="unb_search_area">
+          <div class="unb_search">
+            <div class="unb_serch_icon"></div>
+          </div>
+          <div class="unb_cart"></div>
+        </div>
+      </div>
     </header> <!-- // #headBox-->
 
 
     <section id="viewBox">
       <h2 class="blind">상단 배너</h2>
-      <div class="view_area"></div>
+      <div class="view_area">
+        <div class="view_before_btn"></div>
+        <div class="view"></div>
+        <div class="view_after_btn"></div>
+        <div class="view_num">1/5</div>
+      </div>
       <div class="side_view_area">
         <div class="side_view"></div>
         <div class="side_view"></div>
@@ -55,9 +73,9 @@
       <div class="title_area">
         <div class="title_text">
           <h2 class="title">가장 핫한 큐브</h2>
-          <span class="sub_title">Lorem ipsum dolor sit amet.</span>
+          <span class="sub_title">9월 가장 인기 많은 베스트 큐브를 만나보세요.</span>
         </div>
-        <div class="title_all">모두보기</div>
+        <div class="title_all">모두보기(14)</div>
       </div>
       <div class="best_area">
         <div class="best_item">
@@ -91,8 +109,26 @@
 
     <section id="benefitBox">
       <h2 class="blind">혜택</h2>
-      <div class="benefit_title_area"></div>
-      <div class="benefit_detail_area"></div>
+      <div class="benefit_title_area">
+        <div class="benefit_title">잠시만요</div>
+        <div class="benefit_text_detail">큐브미몰에서만 제공되는 혜택이에요.</div>
+      </div>
+      <div class="benefit_detail_area">
+        <div class="benefit">
+          <div class="benefit_img"></div>
+          <div class="benefit_text">회원가입시 총 5,000원 상당 혜택 및 100원 쿠폰 증정</div>
+        </div>
+
+        <div class="benefit">
+          <div class="benefit_img"></div>
+          <div class="benefit_text">포토리뷰 작성시 2,000P 적립</div>
+        </div>
+
+        <div class="benefit">
+          <div class="benefit_img"></div>
+          <div class="benefit_text">친구 추천시 나와 친구 5,000P 지급</div>
+        </div>
+      </div>
 
     </section> <!-- // #benefitBox-->
 
@@ -101,10 +137,13 @@
       <div class="title_area">
         <div class="title_text">
           <h2 class="title">챌린지</h2>
-          <span class="sub_title">Lorem ipsum dolor sit amet.</span>
+          <span class="sub_title">본인에게 맞는 챌린지를 도전해보세요.</span>
         </div>
       </div>
-      <div class="challenge_area"></div>
+      <div class="challenge_area">
+        <div class="challenge"></div>
+        <div class="challenge"></div>
+      </div>
 
     </article> <!-- // #challengeBox-->
 
@@ -114,15 +153,46 @@
         <div class="title_text">
           <h2 class="title">진행중인 이벤트</h2>
         </div>
-        <div class="title_all">모두보기</div>
+        <div class="title_all">모두보기(4)</div>
       </div>
-      <div class="event_area"></div>
+      <div class="event_area">
+        <div class="event">
+          <div class="event_img"></div>
+          <div class="event_title">Lorem.</div>
+          <div class="event_detial">Lorem ipsum dolor sit.</div>
+        </div>
+
+        <div class="event">
+          <div class="event_img"></div>
+          <div class="event_title">Lorem.</div>
+          <div class="event_detial">Lorem ipsum dolor sit.</div>
+        </div>
+
+        <div class="event">
+          <div class="event_img"></div>
+          <div class="event_title">Lorem.</div>
+          <div class="event_detial">Lorem ipsum dolor sit.</div>
+        </div>
+      </div>
 
     </section> <!-- // #eventBox-->
 
 
     <aside id="awardsBox">
       <h2 class="blind">awards</h2>
+      <div class="awards_title">We're making headlines</div>
+      <div class="awards_area">
+        <div class="awards_before_btn"></div>
+        <div class="awards_main">
+          <div class="awards_before"></div>
+          <div class="awards"></div>
+          <div class="awards"></div>
+          <div class="awards"></div>
+          <div class="awards_after"></div>
+        </div>
+        <div class="awards_after_btn"></div>
+      </div>
+      <div class="awards_bottom"></div>
 
     </aside> <!-- // #awardsBox-->
 
@@ -131,16 +201,72 @@
       <div class="title_area">
         <div class="title_text">
           <h2 class="title">세일 중인 상품</h2>
-          <div class="sub_title">Lorem ipsum dolor sit amet.</div>
+          <div class="sub_title">언제나 간편하고 즐겁게, 큐브미</div>
         </div>
       </div>
-      <div class="sale_area"></div>
+      <div class="sale_area">
+        <div class="sale_item">
+          <div class="sale_img"></div>
+          <div class="sale_title">Lorem, ipsum dolor.</div>
+          <div class="sale_last_price">Lorem, ipsum dolor.</div>
+          <div class="sale_price_area clearfix">
+            <div class="sale_percent">per</div>
+            <div class="sale_price">price</div>
+          </div>
+          <div class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+        </div>
+
+        <div class="sale_item">
+          <div class="sale_img"></div>
+          <div class="sale_title">Lorem, ipsum dolor.</div>
+          <div class="sale_last_price">Lorem, ipsum dolor.</div>
+          <div class="sale_price_area clearfix">
+            <div class="sale_percent">per</div>
+            <div class="sale_price">price</div>
+          </div>
+          <div class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+        </div>
+
+        <div class="sale_item">
+          <div class="sale_img"></div>
+          <div class="sale_title">Lorem, ipsum dolor.</div>
+          <div class="sale_last_price">Lorem, ipsum dolor.</div>
+          <div class="sale_price_area clearfix">
+            <div class="sale_percent">per</div>
+            <div class="sale_price">price</div>
+          </div>
+          <div class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+        </div>
+
+        <div class="sale_item">
+          <div class="sale_img"></div>
+          <div class="sale_title">Lorem, ipsum dolor.</div>
+          <div class="sale_last_price">Lorem, ipsum dolor.</div>
+          <div class="sale_price_area clearfix">
+            <div class="sale_percent">per</div>
+            <div class="sale_price">price</div>
+          </div>
+          <div class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+        </div>
+
+        <div class="sale_item">
+          <div class="sale_img"></div>
+          <div class="sale_title">Lorem, ipsum dolor.</div>
+          <div class="sale_last_price">Lorem, ipsum dolor.</div>
+          <div class="sale_price_area clearfix">
+            <div class="sale_percent">per</div>
+            <div class="sale_price">price</div>
+          </div>
+          <div class="sale_detial">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+        </div>
+      </div>
 
     </section> <!-- // #saleBox-->
 
 
     <article id="magazineBox">
       <h2 class="blind">매거진</h2>
+      <div class="magazine"></div>
 
     </article> <!-- // #magazineBox-->
 
@@ -148,8 +274,36 @@
     <footer id="footBox">
       <div class="foot_top_area">
         <h2>logo</h2>
+        <div class="foot_top_btn">
+          <div class="foot_products"><a href="#">Products</a></div>
+          <div class="foot_brand"><a href="#"> Brand</a></div>
+          <div class="foot_help"><a href="#">Help</a></div>
+          <div class="foot_contact"><a href="#">Contact us</a></div>
+        </div>
       </div>
-      <div class="foot_main_area"></div>
+
+      <div class="foot_main_area">
+        <div class="foot_main_btn">
+          <div class="foot_notice"><a href="#">공지사항</a></div>
+          <div class="foot_inquire"><a href="#">1:1문의</a></div>
+          <div class="foot_qna"><a href="#">자주 묻는 질문</a></div>
+          <div class="foot_personal"><a href="#">개인정보처리방침</a></div>
+          <div class="foot_agreement"><a href="#">이용약관</a></div>
+        </div>
+        <div class="foot_info">
+          <span>(주)아모레퍼시픽 | 대표이사 : 안세홍 | 사업자등록번호 : 106-86-43373|  사업자정보 확인</span>
+          <span>서울특별시 용산구 한강대로 100 | 080-033-5454(쇼핑문의) | 080-023-5454(제품문의)</span>
+          <span>통신판매업신고번호 : 2017-서울용산-1308호 | 건강기능식품판매업 영업신고증 제8호</span>
+          <span>전자메일주소 : cubeme_mall@cubeme.co.kr | 호스팅제공자 : (주)아모레퍼시픽</span>
+          <span>Copyright 2020 CUBE ME. All rights reserved.</span>
+        </div>
+
+        <div class="foot_bottom_btn">
+          <div class="foot_language">KOR</div>
+          <div class="foot_facebook">f</div>
+          <div class="foot_instagram">o</div>
+        </div>
+      </div>
 
     </footer> <!-- // #footBox-->
 
