--- a/study_code/c_layout_01/html/a_content.html
+++ b/study_code/c_layout_01/html/a_content.html
@@ -40,6 +40,8 @@
         <li><a target="blank" href="./c_01_web.html">웹 문제 1</a></li>
         <li><a target="blank" href="./c_02_web.html">웹 문제 2</a></li>
         <li><a target="blank" href="./c_02_web_result.html">웹 문제 2 풀이</a></li>
+        <li><a target="blank" href="./c_04_web.html">웹 문제 C-1</a></li>
+        <li><a target="blank" href="./c_04_web_result.html">웹 문제 C-1 풀이</a></li>
       </ul>
     </div>
   </div><!-- // #wrap -->
