큐브미 업데이트

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -24,7 +24,12 @@
   <!-- layout -->
   <div id="wrap">
     <header id="headBox">
-      <h1>logo</h1>
+      <h1>
+        <span class="blind">큐브미</span>
+        <a href="#">
+          <img class="logo" src="../img/logo-cubeme-text.png" alt="큐브미 로고">
+        </a>
+      </h1>
       <div id="gnb">
         <ul>
           <li><a href="#">모든 상품</a></li>
@@ -273,7 +278,10 @@
 
     <footer id="footBox">
       <div class="foot_top_area">
-        <h2>logo</h2>
+        <h2>
+          <span class="blind">큐브미</span>
+          <img src="../img/footer-logo-text.svg" alt="큐브미 하단 로고">
+        </h2>
         <div class="foot_top_btn">
           <div class="foot_products"><a href="#">Products</a></div>
           <div class="foot_brand"><a href="#"> Brand</a></div>
