--- a/study_code/b_step_01/html/b_07_font.html
+++ b/study_code/b_step_01/html/b_07_font.html
@@ -46,6 +46,10 @@
       프로야구 통계사이트 스탯티즈에 따르면 최승용은 평균 구속 142.9km 직구에 슬라이더와 커브, 스플리터를 섞어 1군 타자들을 상대해 나가고 있다.
     </p>
   
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit commodi voluptatum, illum earum modi possimus.
+    </p>
+    <button>log in</button>
   </div><!-- // #wrap -->
 
   <!-- script -->
