pt, px, percent

--- a/study_code/b_step_01/html/b_08_unit.html
+++ b/study_code/b_step_01/html/b_08_unit.html
@@ -11,8 +11,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700&display=swap" rel="stylesheet">
   
-  <link rel="stylesheet" href="../css/common/reset.css">
-  <link rel="stylesheet" href="../css/common/common.css">
   <link rel="stylesheet" href="../css/src/b_08_unit.css">
 
   <script src="../js/common/modernizr-custom.js"></script>
@@ -50,7 +48,7 @@
     <hr />
 
     <div class="unit_part pt_part">
-      <h3>px영역(w600, h600)</h3>
+      <h3>pt영역(w600, h600)</h3>
 
       <div class="outer">
         큰영역-level_01 - w:1/2, h:1/2
@@ -71,7 +69,7 @@
     <hr />
 
     <div class="unit_part percent_part">
-      <h3>px영역(w600, h600)</h3>
+      <h3>percent영역(w600, h600)</h3>
 
       <div class="outer">
         큰영역-level_01 - w:1/2, h:1/2
@@ -92,7 +90,7 @@
     <hr />
 
     <div class="unit_part em_part">
-      <h3>px영역(w600, h600)</h3>
+      <h3>em영역(w600, h600)</h3>
 
       <div class="outer">
         큰영역-level_01 - w:1/2, h:1/2
@@ -113,7 +111,7 @@
     <hr />
 
     <div class="unit_part rem_part">
-      <h3>px영역(w600, h600)</h3>
+      <h3>rem영역(w600, h600)</h3>
 
       <div class="outer">
         큰영역-level_01 - w:1/2, h:1/2
